--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,2 @@
 spring.data.mongodb.database=TradingCardsDB
+spring.data.mongodb.uri=mongodb+srv://User91:Aurelia91@cluster0.nd5kiqs.mongodb.net/?retryWrites=true&w=majority
