--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -58,6 +58,7 @@
     </dependencies>
 
     <build>
+        <finalName>tradinglegendcard</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
