--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "@types/react-dom": "^18.0.6",
     "axios": "^1.0.0",
     "react": "^18.2.0",
+    "bootstrap": "^5.2.2",
+    "react-card-flip": "^1.1.5",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
